--- a/src/blockchain/accounts/search/accounts.css
+++ b/src/blockchain/accounts/search/accounts.css
@@ -57,23 +57,29 @@
   text-overflow: ellipsis;
 }
 
-#table-id {
-  flex: 0 0 3%; /* flex-grow: 0; flex-shrink: 0; flex-basis: 10%; */
+#table-account-id {
+  width: 5%;
+  text-align: left;
 }
-#table-address {
-  flex: 0 0 20%; /* Adjust percentage as needed */
+#table-account-address {
+  width: 16%;
+  text-align: center;
 }
-#table-name-tag {
-  flex: 0 0 20%; /* Adjust percentage as needed */
+#table-account-name-tag {
+  width: 15%;
+  text-align: center;
 }
-#table-balance {
-  flex: 0 0 20%; /* Adjust percentage as needed */
+#table-account-balance {
+  width: 15%;
+  text-align: center;
 }
-#table-percentage {
-  flex: 0 0 15%; /* Adjust percentage as needed */
+#table-account-percentage {
+  width: 12%;
+  text-align: center;
 }
-#table-total-count {
-  flex: 0 0 10%; /* Adjust percentage as needed */
+#table-account-total-count {
+  width: 10%;
+  text-align: center;
 }
 
 .blockchain-selector {
