--- a/src/blockchain/blocks/search/blocks.css
+++ b/src/blockchain/blocks/search/blocks.css
@@ -203,38 +203,49 @@
   background-color: rgba(255, 255, 255, 0.1); /* Transparent White */
 }
 
-#table-block-number {
-  flex: 0 0 7%; /* flex-grow: 0; flex-shrink: 0; flex-basis: 10%; */
+#table-blocks-block-number {
+  width: 7%;
+  text-align: left;
 }
-#table-slot {
-  flex: 0 0 8%; /* Adjust percentage as needed */
+#table-blocks-slot {
+  width: 6%;
+  text-align: center;
 }
-#table-age {
-  flex: 0 0 8%; /* Adjust percentage as needed */
+#table-blocks-age {
+  width: 8%;
+  text-align: center;
 }
-#table-txt {
-  flex: 0 0 4%; /* Adjust percentage as needed */
+#table-blocks-txt {
+  width: 4%;
+  text-align: center;
 }
-#table-fee-recipient {
-  flex: 0 0 15%; /* Adjust percentage as needed */
+#table-blocks-fee-recipient {
+  width: 12%;
+  text-align: center;
 }
-#table-total-gas-used {
-  flex: 0 0 15%; /* Adjust percentage as needed */
+#table-blocks-total-gas-used {
+  width: 15%;
+  text-align: center;
 }
-#table-total-gas-limit {
-  flex: 0 0 8%; /* Adjust percentage as needed */
+#table-blocks-total-gas-limit {
+  width: 8%;
+  text-align: center;
 }
-#table-base-fee {
-  flex: 0 0 9%; /* Adjust percentage as needed */
+#table-blocks-base-fee {
+  width: 9%;
+  text-align: center;
 }
-#table-reward {
-  flex: 0 0 7%; /* Adjust percentage as needed */
+#table-blocks-reward {
+  width: 7%;
+  text-align: center;
 }
-#table-burnt-fees {
-  flex: 0 0 9%; /* Adjust percentage as needed */
+#table-blocks-burnt-fees {
+  width: 9%;
+  text-align: right;
 }
 
-#block-number:hover {
+#block-number:hover,
+#block-fee-recipient:hover {
   text-decoration: underline;
   cursor: pointer;
 }
