--- a/src/tokens/topTokens/search/topTokens.css
+++ b/src/tokens/topTokens/search/topTokens.css
@@ -1,35 +1,34 @@
-#table-preview {
+#table-token-preview {
   text-align: left;
-  flex: 0 0 4%; /* flex-grow: 0; flex-shrink: 0; flex-basis: 10%; */
+  width: 4%; /* width-grow: 0; width-shrink: 0; width-basis: 10%; */
 }
-#table-token-name {
+#table-token-token-name {
   text-align: center;
-
-  flex: 0 0 11%; /* Adjust percentage as needed */
+  width: 11%; /* Adjust percentage as needed */
 }
-#table-price {
+#table-token-price {
   text-align: center;
-  flex: 0 0 6%; /* Adjust percentage as needed */
+  width: 6%; /* Adjust percentage as needed */
 }
-#table-change {
+#table-token-change {
   text-align: center;
-  flex: 0 0 7%; /* Adjust percentage as needed */
+  width: 7%; /* Adjust percentage as needed */
 }
-#table-volume {
+#table-token-volume {
   text-align: center;
-  flex: 0 0 11%; /* Adjust percentage as needed */
+  width: 11%; /* Adjust percentage as needed */
 }
-#table-circulating-market-cap {
+#table-token-circulating-market-cap {
   text-align: center;
-  flex: 0 0 15%; /* Adjust percentage as needed */
+  width: 15%; /* Adjust percentage as needed */
 }
-#table-onchain-market-cap {
+#table-token-onchain-market-cap {
   text-align: center;
-  flex: 0 0 15%; /* Adjust percentage as needed */
+  width: 15%; /* Adjust percentage as needed */
 }
-#table-holders {
+#table-token-holders {
   text-align: right;
-  flex: 0 0 10%; /* Adjust percentage as needed */
+  width: 10%; /* Adjust percentage as needed */
 }
 #custom-padding {
   padding-left: 10%;
