--- a/src/header.css
+++ b/src/header.css
@@ -89,7 +89,7 @@
 }
 
 #list-elem:hover {
-  background-color: #8e44ad; /* Light purple on hover */
+  background-color: #813a74; /* Light purple on hover */
   color: #ffffff;
   border-radius: 8px;
   text-decoration: none;
