--- a/src/cryptocurrency/categories/search/categories.css
+++ b/src/cryptocurrency/categories/search/categories.css
@@ -44,6 +44,48 @@
 }
 
 #table-categories-graph {
-  width: 8%;
+  width: 12%;
   text-align: right;
+  padding-right: 3%;
+}
+
+.progress-bar-container {
+  width: 100%;
+  position: relative;
+  margin: 0;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 10px;
+  background-color: #e0e0e0; /* Gray background for the entire progress bar */
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+.progress-fill {
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.progress-fill.gainers {
+  background-color: green;
+  left: 0;
+}
+
+.progress-fill.losers {
+  background-color: red;
+  right: 0;
+}
+
+.progress-values {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+  font-size: 12px;
+  font-weight: bold;
 }
