--- a/src/tokens/nftStatistics/search/nftStatistics.css
+++ b/src/tokens/nftStatistics/search/nftStatistics.css
@@ -345,3 +345,6 @@
   font-weight: bold; /* Highlight the current page information */
   color: #ffffff; /* White text */
 }
+.td {
+  text-align: center;
+}
